objects/copado__Scheduled_Job__c.object
<CustomObject>
    <fields>
        <fullName>copado__Apex_Job_ID__c</fullName>
        <label>Apex Job ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Cron_Expression__c</fullName>
        <label>Cron Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Delete_Runs_after_days__c</fullName>
        <defaultValue>10</defaultValue>
        <inlineHelpText>When the Job is executed, it will check all Runs that are older than this number of days and delete the historical records.</inlineHelpText>
        <label>Delete Runs after (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Run_as_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This User must have a Copado License assigned, created an Org credential for his Copado user and created API Key. This API Key will be used for the webhooks.</inlineHelpText>
        <label>Run as User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scheduled_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Webhook_URL__c</fullName>
        <label>Webhook URL</label>
        <type>Url</type>
    </fields>
    <label>Scheduled Job</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Run_as_User__c</columns>
        <columns>copado__Message__c</columns>
        <columns>copado__Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Scheduled Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>